add config profiles dev, prod

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,3 @@
-quarkus.config.profile.parent=common
 quarkus.log.level=INFO
 quarkus.log.category."com.afroware".level=DEBUG
 quarkus.smallrye-openapi.path=/openapi
@@ -17,7 +16,6 @@ quarkus.smallrye-openapi.info-license-name=Apache 2.0
 quarkus.smallrye-openapi.info-license-url=https://www.apache.org/licenses/LICENSE-2.0.html
 
 
-
 quarkus.health.extensions.enabled=true
 quarkus.health.openapi.included=true
 quarkus.smallrye-health.context-propagation=true
@@ -33,7 +31,7 @@ quarkus.smallrye-health.startup-path=/health/startup
 quarkus.container-image.builder=docker
 
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:4200,http://www.bar.io,/https://([a-z0-9\\-_]+)\\.app\\.mydomain\\.com/
+quarkus.http.cors.origins=http://localhost:4200
 quarkus.http.cors.methods=GET,PUT,POST
 quarkus.http.cors.headers=X-Custom
 quarkus.http.cors.exposed-headers=Content-Disposition
