--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,17 +1,17 @@
 quarkus.config.profile.parent=common
 quarkus.log.level=INFO
-quarkus.log.category."com.afroware".level=DEBUG
+quarkus.log.category."com.afroware".level=INFO
 quarkus.smallrye-openapi.path=/openapi
 quarkus.swagger-ui.path=/swagger
 
-quarkus.smallrye-openapi.info-title=Blockchain API
-%dev.quarkus.smallrye-openapi.info-title=Blockchain API (development)
-%test.quarkus.smallrye-openapi.info-title=Blockchain API (test)
+quarkus.smallrye-openapi.info-title=Atlantic Blockchain API
+%dev.quarkus.smallrye-openapi.info-title=Atlantic Blockchain API (development)
+%test.quarkus.smallrye-openapi.info-title=Atlantic Blockchain API (test)
 quarkus.smallrye-openapi.info-version=1.0.1
-quarkus.smallrye-openapi.info-description=Blockchain Initiative
+quarkus.smallrye-openapi.info-description=Atlantic Blockchain Initiative
 quarkus.smallrye-openapi.info-terms-of-service=MIT
 quarkus.smallrye-openapi.info-contact-email=blocs@afroware.com
-quarkus.smallrye-openapi.info-contact-name=Blockchain API Support
+quarkus.smallrye-openapi.info-contact-name=Atlantic Blockchain API Support
 quarkus.smallrye-openapi.info-contact-url=http://afroware.com/contact
 quarkus.smallrye-openapi.info-license-name=Apache 2.0
 quarkus.smallrye-openapi.info-license-url=https://www.apache.org/licenses/LICENSE-2.0.html
